// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web web development 1`] = `
{
  "bail": false,
  "cache": {
    "buildDependencies": {
      "config": [
        "packages/webpack-config/src/webpack.config.ts",
      ],
      "defaultWebpack": [
        "packages/webpack-config/node_modules/webpack/lib/",
      ],
      "tsconfig": [],
    },
    "cacheDirectory": "packages/webpack-config/e2e/basic/node_modules/.cache/web",
    "store": "pack",
    "type": "filesystem",
  },
  "context": "packages/webpack-config/e2e/basic",
  "devServer": {
    "allowedHosts": [
      "all",
    ],
    "client": {
      "overlay": false,
      "webSocketURL": {
        "hostname": undefined,
        "pathname": "/_expo/ws",
        "port": undefined,
      },
    },
    "compress": true,
    "devMiddleware": {
      "index": true,
      "publicPath": "",
    },
    "historyApiFallback": {
      "disableDotRule": true,
      "index": "/",
    },
    "host": "0.0.0.0",
    "https": false,
    "proxy": undefined,
    "setupMiddlewares": [Function],
    "static": {
      "directory": "packages/webpack-config/web-default",
      "publicPath": [
        "/",
      ],
      "watch": {},
    },
    "webSocketServer": {
      "options": {
        "host": undefined,
        "path": "/_expo/ws",
        "port": undefined,
      },
      "type": "ws",
    },
  },
  "devtool": "cheap-module-source-map",
  "infrastructureLogging": {
    "debug": true,
    "level": "verbose",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "enforce": "pre",
        "exclude": /@babel\\(\\?:\\\\/\\|\\\\\\\\\\{1,2\\}\\)runtime/,
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\|css\\)\\$/,
        "use": [
          {
            "loader": "node_modules/source-map-loader/dist/cjs.js",
            "options": {
              "filterSourceMappingUrl": [Function],
            },
          },
        ],
      },
      {
        "oneOf": [
          {
            "mimetype": "image/avif",
            "parser": {
              "dataUrlCondition": {
                "maxSize": 1000,
              },
            },
            "test": [
              /\\\\\\.avif\\$/,
            ],
            "type": "asset",
          },
          {
            "parser": {
              "dataUrlCondition": {
                "maxSize": 1000,
              },
            },
            "test": [
              /\\\\\\.bmp\\$/,
              /\\\\\\.gif\\$/,
              /\\\\\\.jpe\\?g\\$/,
              /\\\\\\.png\\$/,
              /\\\\\\.svg\\$/,
            ],
            "type": "asset",
          },
          {
            "include": [Function],
            "resolve": {
              "fullySpecified": false,
            },
            "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
            "use": {
              "loader": "node_modules/babel-loader/lib/index.js",
              "options": {
                "babelrc": false,
                "cacheCompression": false,
                "cacheDirectory": "packages/webpack-config/e2e/basic/.expo/web/cache/development/babel-loader",
                "cacheIdentifier": "custom-value-to-skip-babel-config-error",
                "caller": {
                  "__dangerous_rule_id": "expo-babel-loader",
                  "bundler": "webpack",
                  "mode": "development",
                  "platform": "web",
                },
                "compact": false,
                "configFile": true,
                "inputSourceMap": true,
                "root": "packages/webpack-config/e2e/basic",
                "sourceMaps": true,
                "sourceType": "unambiguous",
              },
            },
          },
          {
            "sideEffects": true,
            "test": /\\\\\\.\\(css\\)\\$/,
            "use": [
              "node_modules/style-loader/dist/cjs.js",
              {
                "loader": "node_modules/css-loader/dist/cjs.js",
                "options": {
                  "importLoaders": 1,
                  "modules": {
                    "mode": "icss",
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "exclude": [
              /\\^\\$/,
              /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
              /\\\\\\.html\\$/,
              /\\\\\\.json\\$/,
            ],
            "type": "asset/resource",
          },
        ],
      },
    ],
    "strictExportPresence": false,
  },
  "name": "web",
  "output": {
    "assetModuleFilename": "static/media/[name].[hash][ext]",
    "chunkFilename": "static/js/[name].chunk.js",
    "devtoolModuleFilenameTemplate": [Function],
    "filename": "static/js/bundle.js",
    "path": "packages/webpack-config/e2e/basic/web-build",
    "pathinfo": true,
    "publicPath": "/",
    "uniqueName": "web",
  },
  "plugins": [
    "HtmlWebpackPlugin",
    "InterpolateHtmlPlugin",
    "FaviconWebpackPlugin",
    "ModuleNotFoundPlugin",
    "DefinePlugin",
    "WebpackManifestPlugin",
    "ExpectedErrorsPlugin",
  ],
  "resolve": {
    "alias": {
      "react-native$": "react-native-web",
      "react-native/Libraries/Components/View/ViewStylePropTypes$": "react-native-web/dist/exports/View/ViewStylePropTypes",
      "react-native/Libraries/EventEmitter/NativeEventEmitter$": "react-native-web/dist/vendor/react-native/NativeEventEmitter",
      "react-native/Libraries/EventEmitter/RCTDeviceEventEmitter$": "react-native-web/dist/vendor/react-native/NativeEventEmitter/RCTDeviceEventEmitter",
      "react-native/Libraries/vendor/emitter/EventEmitter$": "react-native-web/dist/vendor/react-native/emitter/EventEmitter",
      "react-native/Libraries/vendor/emitter/EventSubscriptionVendor$": "react-native-web/dist/vendor/react-native/emitter/EventSubscriptionVendor",
    },
    "aliasFields": [
      "browser",
      "module",
      "main",
    ],
    "extensions": [
      ".web.ts",
      ".web.tsx",
      ".web.mjs",
      ".web.js",
      ".web.jsx",
      ".ts",
      ".tsx",
      ".mjs",
      ".js",
      ".jsx",
      ".json",
      ".wasm",
    ],
    "mainFields": [
      "browser",
      "module",
      "main",
    ],
    "symlinks": false,
  },
  "stats": "detailed",
  "target": [
    "web",
  ],
  "watchOptions": {
    "aggregateTimeout": 5,
    "ignored": [
      "**/.git/**",
      "**/node_modules/**",
      "**/.expo/**",
      "**/.expo-shared/**",
      "**/web-build/**",
      "**/.#*",
    ],
  },
}
`;

exports[`web web production 1`] = `
{
  "bail": true,
  "cache": {
    "buildDependencies": {
      "config": [
        "packages/webpack-config/src/webpack.config.ts",
      ],
      "defaultWebpack": [
        "packages/webpack-config/node_modules/webpack/lib/",
      ],
      "tsconfig": [],
    },
    "cacheDirectory": "packages/webpack-config/e2e/basic/node_modules/.cache/web",
    "store": "pack",
    "type": "filesystem",
  },
  "context": "packages/webpack-config/e2e/basic",
  "devtool": "source-map",
  "infrastructureLogging": {
    "debug": true,
    "level": "verbose",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "enforce": "pre",
        "exclude": /@babel\\(\\?:\\\\/\\|\\\\\\\\\\{1,2\\}\\)runtime/,
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\|css\\)\\$/,
        "use": [
          {
            "loader": "node_modules/source-map-loader/dist/cjs.js",
            "options": {
              "filterSourceMappingUrl": [Function],
            },
          },
        ],
      },
      {
        "oneOf": [
          {
            "mimetype": "image/avif",
            "parser": {
              "dataUrlCondition": {
                "maxSize": 1000,
              },
            },
            "test": [
              /\\\\\\.avif\\$/,
            ],
            "type": "asset",
          },
          {
            "parser": {
              "dataUrlCondition": {
                "maxSize": 1000,
              },
            },
            "test": [
              /\\\\\\.bmp\\$/,
              /\\\\\\.gif\\$/,
              /\\\\\\.jpe\\?g\\$/,
              /\\\\\\.png\\$/,
              /\\\\\\.svg\\$/,
            ],
            "type": "asset",
          },
          {
            "include": [Function],
            "resolve": {
              "fullySpecified": false,
            },
            "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
            "use": {
              "loader": "node_modules/babel-loader/lib/index.js",
              "options": {
                "babelrc": false,
                "cacheCompression": false,
                "cacheDirectory": "packages/webpack-config/e2e/basic/.expo/web/cache/production/babel-loader",
                "cacheIdentifier": "custom-value-to-skip-babel-config-error",
                "caller": {
                  "__dangerous_rule_id": "expo-babel-loader",
                  "bundler": "webpack",
                  "mode": "production",
                  "platform": "web",
                },
                "compact": true,
                "configFile": true,
                "inputSourceMap": true,
                "root": "packages/webpack-config/e2e/basic",
                "sourceMaps": true,
                "sourceType": "unambiguous",
              },
            },
          },
          {
            "sideEffects": true,
            "test": /\\\\\\.\\(css\\)\\$/,
            "use": [
              {
                "loader": "node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {},
              },
              {
                "loader": "node_modules/css-loader/dist/cjs.js",
                "options": {
                  "importLoaders": 1,
                  "modules": {
                    "mode": "icss",
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "exclude": [
              /\\^\\$/,
              /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
              /\\\\\\.html\\$/,
              /\\\\\\.json\\$/,
            ],
            "type": "asset/resource",
          },
        ],
      },
    ],
    "strictExportPresence": false,
  },
  "name": "web",
  "optimization": {
    "emitOnErrors": false,
    "minimize": true,
    "minimizer": [
      {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "compress": {
                "comparisons": false,
                "ecma": 5,
                "inline": 2,
                "warnings": false,
              },
              "keep_classnames": false,
              "keep_fnames": false,
              "mangle": {
                "safari10": true,
              },
              "output": {
                "ascii_only": true,
                "comments": false,
                "ecma": 5,
              },
              "parse": {
                "ecma": 2018,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
      {
        "options": {
          "exclude": undefined,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "nodeEnv": false,
    "splitChunks": {
      "chunks": "all",
    },
    "usedExports": false,
  },
  "output": {
    "assetModuleFilename": "static/media/[name].[hash][ext]",
    "chunkFilename": "static/js/[name].[contenthash:8].chunk.js",
    "devtoolModuleFilenameTemplate": [Function],
    "filename": "static/js/[name].[contenthash:8].js",
    "path": "packages/webpack-config/e2e/basic/web-build",
    "publicPath": "/",
    "uniqueName": "web",
  },
  "plugins": [
    "CleanWebpackPlugin",
    "CopyPlugin",
    "HtmlWebpackPlugin",
    "InterpolateHtmlPlugin",
    "FaviconWebpackPlugin",
    "ApplePwaWebpackPlugin",
    "ChromeIconsWebpackPlugin",
    "ModuleNotFoundPlugin",
    "DefinePlugin",
    "MiniCssExtractPlugin",
    "WebpackManifestPlugin",
    "ExpectedErrorsPlugin",
  ],
  "resolve": {
    "alias": {
      "react-native$": "react-native-web",
      "react-native/Libraries/Components/View/ViewStylePropTypes$": "react-native-web/dist/exports/View/ViewStylePropTypes",
      "react-native/Libraries/EventEmitter/NativeEventEmitter$": "react-native-web/dist/vendor/react-native/NativeEventEmitter",
      "react-native/Libraries/EventEmitter/RCTDeviceEventEmitter$": "react-native-web/dist/vendor/react-native/NativeEventEmitter/RCTDeviceEventEmitter",
      "react-native/Libraries/vendor/emitter/EventEmitter$": "react-native-web/dist/vendor/react-native/emitter/EventEmitter",
      "react-native/Libraries/vendor/emitter/EventSubscriptionVendor$": "react-native-web/dist/vendor/react-native/emitter/EventSubscriptionVendor",
    },
    "aliasFields": [
      "browser",
      "module",
      "main",
    ],
    "extensions": [
      ".web.ts",
      ".web.tsx",
      ".web.mjs",
      ".web.js",
      ".web.jsx",
      ".ts",
      ".tsx",
      ".mjs",
      ".js",
      ".jsx",
      ".json",
      ".wasm",
    ],
    "mainFields": [
      "browser",
      "module",
      "main",
    ],
    "symlinks": false,
  },
  "stats": "detailed",
  "target": [
    "web",
  ],
  "watchOptions": {
    "aggregateTimeout": 5,
    "ignored": [
      "**/.git/**",
      "**/node_modules/**",
      "**/.expo/**",
      "**/.expo-shared/**",
      "**/web-build/**",
      "**/.#*",
    ],
  },
}
`;
